Fixed Host-Yourself icon box alignment

--- a/assets/scss/modules/host-yourself.scss
+++ b/assets/scss/modules/host-yourself.scss
@@ -28,7 +28,7 @@
 .icon-box {
     //d-flex justify-content-center flex-column text-center
     display: flex;
-    justify-content: center;
+    align-items: center;
     flex-direction: column;
     text-align: center;
 
